# Quant-Research-Lab

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml
configs/: assets.yaml  backtest.yaml  macro.yaml  options.yaml
docs/: api_reference.md  architecture.md  assumptions.md  examples.md  getting_started.md  index.md  limitations.md  methodology.md
notebooks/: 01_risk_dashboard_research.ipynb  02_pairs_trading_research.ipynb  03_macro_regime_research.ipynb  04_vol_surface_research.ipynb  05_backtesting_research.ipynb
scripts/: run_backtest.py  run_macro_regime_model.py  run_pairs_trading.py  run_risk_dashboard.py  run_vol_surface.py
src/quant_research_lab/: __init__.py  cli.py
src/quant_research_lab/backtesting/: __init__.py  calendar.py  constraints.py  costs.py  engine.py  execution.py  orders.py  performance.py  portfolio.py  research.py
src/quant_research_lab/data/: __init__.py  cache.py  fred_data.py  market_data.py  options_data.py
src/quant_research_lab/derivatives/: __init__.py  black_scholes.py  greeks.py  volatility_surface.py
src/quant_research_lab/macro/: __init__.py  macro_features.py  regime_allocation.py  regime_detection.py
src/quant_research_lab/portfolio/: __init__.py  covariance.py  optimization.py
src/quant_research_lab/risk/: __init__.py  drawdowns.py  ewma.py  factor_model.py  portfolio_metrics.py  stress_testing.py  var_models.py
src/quant_research_lab/simulation/: __init__.py  monte_carlo.py
src/quant_research_lab/strategies/: __init__.py  momentum.py  pairs_trading.py  signals.py
src/quant_research_lab/utils/: config.py  logging.py
src/quant_research_lab/visualization/: __init__.py  charts.py  reports.py
tests/: test_backtesting_engine.py  test_backtesting_extensions.py  test_black_scholes.py  test_macro_features.py  test_pairs_trading.py  test_portfolio_metrics.py  test_portfolio_optimization.py  test_risk_extensions.py  test_simulation.py
