[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research-lab"
version = "0.1.0"
description = "Institutional-style local research framework for portfolio risk, stat arb, macro regimes, volatility surfaces, and backtesting."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Quant Research Lab" }
]
license = { text = "MIT" }
keywords = ["quant", "finance", "portfolio", "backtesting", "options", "risk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "statsmodels>=0.14.0",
  "scikit-learn>=1.4.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "yfinance>=0.2.40",
  "fredapi>=0.5.2",
  "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.31.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[project.scripts]
qrl-risk = "quant_research_lab.cli:run_risk_dashboard"
qrl-pairs = "quant_research_lab.cli:run_pairs_trading"
qrl-macro = "quant_research_lab.cli:run_macro_regime_model"
qrl-vol = "quant_research_lab.cli:run_vol_surface"
qrl-backtest = "quant_research_lab.cli:run_backtest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
